--- a/repo/index.html
+++ b/repo/index.html
@@ -1,1 +1,3 @@
 <a href="repository.elvisus-1.0.zip">repository.elvisus-1.0.zip</a>
+<a href="plugin.video.balandro-2.zip">plugin.video.balandro-2.zip</a>
+<a href="skin.arctic.zephyr.2-1.0.zip">skin.arctic.zephyr.2-1.0.zip</a>
